# Assurance-Insight-Copilot

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/auth/: models.py  routes.py  schemas.py  security.py
backend/app/chat/: models.py  rag_pipeline.py  routes.py  schemas.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/documents/: ingestion.py  models.py  routes.py  schemas.py
backend/app/evaluation/: models.py
backend/tests/: test_auth.py  test_chat.py  test_documents.py
