[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assurance-insight-copilot"
version = "0.1.0"
description = "Assurance Insight Copilot backend"
readme = "../README.md"
requires-python = ">=3.11"
authors = [{name = "Assurance Insight"}]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "azure-identity>=1.16",
    "azure-storage-blob>=12.19",
    "azure-search-documents>=11.4",
    "azure-ai-openai>=1.0.0b5",
    "httpx>=0.27",
    "pypdf>=4.2",
    "python-docx>=1.1",
    "pandas>=2.1",
    "tenacity>=8.2",
    "loguru>=0.7",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true

